<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/dialog_background"
    android:elevation="5dp"
    app:behavior_hideable="true"
    app:behavior_peekHeight="0dp"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="vertical"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/add_chat_participant_id_input_holder" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/add_chat_participant_id_input_holder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            app:boxBackgroundColor="@color/white"
            app:layout_constraintTop_toBottomOf="@+id/recyclerView"
            app:layout_constraintBottom_toTopOf="@id/add_chat_participant_id_cancel_button"
            app:layout_goneMarginTop="17dp"
            app:hintEnabled="false"
            app:boxBackgroundMode="outline"
            app:boxStrokeColor="@color/divider"
            app:boxStrokeWidth="1dp"
            app:boxCornerRadiusBottomEnd="30dp"
            app:boxCornerRadiusTopEnd="30dp"
            app:boxCornerRadiusBottomStart="30dp"
            app:boxCornerRadiusTopStart="30dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/add_chat_participant_id_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_add_chat_participant"
                android:inputType="textCapSentences"
                android:imeOptions="actionDone"
                android:maxLength="25"
                android:gravity="center_vertical"
                android:paddingTop="12dp"
                android:paddingBottom="12dp"/>

        </com.google.android.material.textfield.TextInputLayout>
        <ImageView
            android:id="@+id/logo_warning"
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:src="@drawable/warning"
            android:layout_marginTop="5dp"
            app:layout_constraintStart_toStartOf="@id/add_chat_participant_id_input_holder"
            app:layout_constraintTop_toBottomOf="@id/add_chat_participant_id_input_holder" />
        <TextView
            android:id="@+id/disclaimer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            app:layout_constraintTop_toTopOf="@id/logo_warning"
            app:layout_constraintStart_toEndOf="@id/logo_warning"
            android:text="@string/history_disclaimer"
            style="@style/Disclaimer"
            />
        <TextView
            android:id="@+id/identity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            tools:ignore="MissingConstraints" />


        <Button
            android:id="@+id/add_chat_participant_id_cancel_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:elevation="5dp"
            android:layout_marginEnd="4dp"
            android:backgroundTint="@color/participant_background"
            android:textColor="@color/white"
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/add_chat_participant_id_button"
            app:layout_constraintTop_toBottomOf="@id/disclaimer"
            app:layout_constraintBottom_toBottomOf="parent" />

        <Button
            android:id="@+id/add_chat_participant_id_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/add_participant_button"
            android:elevation="5dp"
            android:layout_marginStart="4dp"
            android:backgroundTint="@color/colorEet"
            android:textColor="@color/white"
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toEndOf="@id/add_chat_participant_id_cancel_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/disclaimer"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>
