<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="112dp"
        android:background="@color/conversation_details_background">

        <ImageView
            android:id="@+id/profile_image1"
            android:layout_width="54dp"
            android:layout_height="54dp"
            android:layout_marginStart="22dp"
            android:src="@drawable/icon_single_user_conversation"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:visibility="gone"/>
        <TextView
            android:id="@+id/profile_image"
            android:layout_width="54dp"
            android:layout_height="54dp"
            android:layout_marginStart="22dp"
            android:layout_centerVertical="true"
            android:background="@drawable/bg_participant_icon"
            android:gravity="center"
            android:text="E E T"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/profile_name"
            style="@style/TextViewChildTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="22dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintBottom_toTopOf="@id/profile_identity"
            app:layout_constraintStart_toEndOf="@+id/profile_image"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed"
            tools:text="Mohana Stefan" />

        <TextView
            android:id="@+id/profile_identity"
            style="@style/ConversationDetails_Subtext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="22dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/profile_image"
            app:layout_constraintTop_toBottomOf="@id/profile_name"
            tools:text="mohana@example.com" />

    </androidx.constraintlayout.widget.ConstraintLayout>
    <LinearLayout
        android:id="@+id/emailLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:background="?android:attr/selectableItemBackground"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            style="@style/TextViewConversationDetails"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:layout_marginTop="5dp"/>

        <TextView
            android:id="@+id/email_id"
            style="@style/ConversationDetails_Subtext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"/>

    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.7dp"
        android:background="@color/divider"/>
    <LinearLayout
        android:id="@+id/phoneNumberLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:background="?android:attr/selectableItemBackground"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            style="@style/TextViewConversationDetails"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/phonenumber"
            android:layout_marginTop="5dp"/>

        <TextView
            android:id="@+id/phone_number"
            style="@style/ConversationDetails_Subtext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"/>

    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.7dp"
        android:background="@color/divider"/>
    <LinearLayout
        android:id="@+id/toggle_alert"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:background="?android:attr/selectableItemBackground"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            style="@style/TextViewConversationDetails"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/alerts"
            android:layout_marginTop="1dp"/>

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/switchbtn"
            android:layout_width="50dp"
            android:layout_height="20dp"
            android:layout_marginTop="10dp"
            app:thumbTint="@drawable/switch_thumb_selector"
            app:trackTint="@drawable/switch_track_selector"
            app:useMaterialThemeColors="false"
            />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.7dp"
        android:background="@color/divider"/>
<!--    <LinearLayout-->
<!--        android:id="@+id/edit_profile"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginTop="1dp"-->
<!--        android:background="?android:attr/selectableItemBackground"-->
<!--        android:orientation="vertical"-->
<!--        android:padding="16dp">-->

<!--        <TextView-->
<!--            style="@style/TextViewConversationDetails"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:text="@string/edit_profile"-->
<!--            android:layout_marginTop="5dp"/>-->

<!--        <TextView-->
<!--            style="@style/ConversationDetails_Subtext"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:text="@string/edit_friendly_name"-->
<!--            android:layout_marginTop="10dp"/>-->

<!--    </LinearLayout>-->
<!--    <View-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="0.7dp"-->
<!--        android:background="@color/divider"/>-->
    <LinearLayout
        android:id="@+id/sign_out"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:background="?android:attr/selectableItemBackground"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            style="@style/TextViewConversationDetails"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_out"
            android:layout_marginTop="5dp" />

        <TextView
            style="@style/ConversationDetails_Subtext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_out_account"
            android:layout_marginTop="10dp"/>

    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.7dp"
        android:background="@color/divider"/>
</LinearLayout>